--- a/clients/owner-client/src/app/_components/main-components/side-nav/owner-side-nav/owner-side-nav.component.html
+++ b/clients/owner-client/src/app/_components/main-components/side-nav/owner-side-nav/owner-side-nav.component.html
@@ -26,7 +26,7 @@
     <mat-icon class="svg">list_alt</mat-icon>
   </app-side-nav-dropdown>
 
-  <app-side-nav-item [name]="'Chat'" [url]="'/chats'">
+  <app-side-nav-item [name]="'chat'" [url]="'/chats'">
     <mat-icon class="svg">chat</mat-icon>
   </app-side-nav-item>
 
