--- a/clients/owner-client/src/app/_components/main-components/side-nav/side-nav-item/side-nav-item.component.html
+++ b/clients/owner-client/src/app/_components/main-components/side-nav/side-nav-item/side-nav-item.component.html
@@ -1,4 +1,4 @@
 <div class="main-wrapper" [routerLink]="url" routerLinkActive="active">
     <ng-content></ng-content>
-    <span>{{ name | titlecase }}</span>
+    <span>{{ name | translate | titlecase }}</span>
 </div>
