--- a/clients/owner-client/src/app/_components/menu-card/menu-card.component.html
+++ b/clients/owner-client/src/app/_components/menu-card/menu-card.component.html
@@ -27,7 +27,7 @@
         (click)="onViewMore()"
         [disabled]="disable"
       >
-        View More
+        {{ "see more" | translate | titlecase }}
       </button>
     </div>
   </mat-card-actions>
