--- a/clients/owner-client/src/app/_components/restaurant-card/restaurant-card.component.html
+++ b/clients/owner-client/src/app/_components/restaurant-card/restaurant-card.component.html
@@ -32,7 +32,7 @@
     </mat-card-content>
     <mat-card-actions class="action-wrapper">
       <button class="btn" type="button" mat-raised-button color="accent" (click)="onSeeMore()">
-        See More
+        {{ "see more" | translate | titlecase }}
       </button>
     </mat-card-actions>
     <mat-card-footer class="footer-wrapper">
