--- a/clients/owner-client/src/app/_layouts/employees/employees.component.html
+++ b/clients/owner-client/src/app/_layouts/employees/employees.component.html
@@ -1,8 +1,8 @@
 <mat-form-field appearance="outline" class="mobile-full-width">
-  <mat-label>Select Restaurant</mat-label>
+  <mat-label>{{ "select restaurant" | translate | titlecase }}</mat-label>
   <mat-select (valueChange)="onChangeRestaurant($event)">
     <mat-option *ngFor="let restaurant of restaurants" [value]="restaurant.id">
-      {{ restaurant.name }}
+      {{ restaurant.name | translate | titlecase }}
     </mat-option>
   </mat-select>
 </mat-form-field>
