--- a/clients/owner-client/src/app/_components/account-header/account-header.component.html
+++ b/clients/owner-client/src/app/_components/account-header/account-header.component.html
@@ -1,21 +1,54 @@
 <div class="main-wrapper">
-    <img class="image" src="{{ accountHeader.backgroundImage || 'https://noshnexus.com/images/default/default.png' }}" alt="background-image">
-    <div class="content-wrapper">
-        <div class="account-info">
-            <div class="profile-image-wrapper">
-                <img (load)="isProfileLoading = false" class="profile-image" src="{{ accountHeader.profileImage || 'https://noshnexus.com/images/default/default-profile.png' }}" alt="profile image">
-                <div *ngIf="isProfileLoading" class="spinner-wrapper">
-                    <mat-spinner></mat-spinner>
-                </div>
-            </div>
-            <div class="name-info">
-                <h1>{{ accountHeader.username }}</h1>
-                <div class="name">{{ accountHeader.lastName }} {{ accountHeader.firstName }}</div>
-            </div>
+  <img
+    class="image"
+    src="{{
+      accountHeader.backgroundImage ||
+        'https://noshnexus.com/images/default/default.png'
+    }}"
+    alt="background-image"
+  />
+  <div class="content-wrapper">
+    <div class="account-info">
+      <div class="profile-image-wrapper">
+        <img
+          (load)="isProfileLoading = false"
+          class="profile-image"
+          src="{{
+            accountHeader.profileImage ||
+              'https://noshnexus.com/images/default/default-profile.png'
+          }}"
+          alt="profile image"
+        />
+        <div *ngIf="isProfileLoading" class="spinner-wrapper">
+          <mat-spinner></mat-spinner>
         </div>
-        <div class="btn-wrapper">
-            <button *ngIf="canEdit" type="button" mat-raised-button color="accent" (click)="onEdit()">Edit</button>
-            <button *ngIf="canDelete" type="button" mat-raised-button color="warn" (click)="onDelete()">Delete</button>
+      </div>
+      <div class="name-info">
+        <h1>{{ accountHeader.username }}</h1>
+        <div class="name">
+          {{ accountHeader.lastName }} {{ accountHeader.firstName }}
         </div>
+      </div>
     </div>
+    <div class="btn-wrapper">
+      <button
+        *ngIf="canEdit"
+        type="button"
+        mat-raised-button
+        color="accent"
+        (click)="onEdit()"
+      >
+        {{ 'edit' | translate | titlecase }}
+      </button>
+      <button
+        *ngIf="canDelete"
+        type="button"
+        mat-raised-button
+        color="warn"
+        (click)="onDelete()"
+      >
+        {{ 'delete' | translate | titlecase }}
+      </button>
+    </div>
+  </div>
 </div>
