--- a/clients/owner-client/src/app/_components/main-components/side-nav/side-nav-dropdown/side-nav-dropdown.component.html
+++ b/clients/owner-client/src/app/_components/main-components/side-nav/side-nav-dropdown/side-nav-dropdown.component.html
@@ -5,7 +5,7 @@
   [matRippleColor]="'var(--primary-light)'"
 >
   <ng-content></ng-content>
-  <span>{{ name | titlecase }}</span>
+  <span>{{ name | translate | titlecase }}</span>
   <mat-icon inline class="svg" *ngIf="!isOpen">expand_more</mat-icon>
   <mat-icon inline class="svg" *ngIf="isOpen">expand_less</mat-icon>
 </div>
@@ -23,7 +23,7 @@
       routerLinkActive="active"
       [routerLinkActiveOptions]="{exact: true}"
     >
-      {{ item.name }}
+      {{ item.name | translate }}
     </div>
   </ng-container>
 </div>
