--- a/clients/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/message-btn/message-btn.component.html
+++ b/clients/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/message-btn/message-btn.component.html
@@ -1,26 +1,43 @@
 <div class="main-wrapper" *ngIf="chatsMenu">
   <button type="button" mat-icon-button (click)="openMessages = !openMessages">
-    <mat-icon matBadge="{{ chatsMenu.notSeenNumber > 0 ? chatsMenu.notSeenNumber: null }}" aria-hidden="false">chat</mat-icon>
+    <mat-icon
+      matBadge="{{
+        chatsMenu.notSeenNumber > 0 ? chatsMenu.notSeenNumber : null
+      }}"
+      aria-hidden="false"
+      >chat</mat-icon
+    >
   </button>
 
   <div class="notifications-menu-wrapper" *ngIf="openMessages">
     <div class="header">
-      Messages
-      <mat-chip class="chip">{{ chatsMenu.notSeenNumber }} New</mat-chip>
+      {{ "messages" | translate | titlecase }}
+      <mat-chip class="chip"
+        >{{ chatsMenu.notSeenNumber }}
+        {{ "new-messages" | translate | uppercase }}</mat-chip
+      >
       <div class="mark-all-as-read" (click)="onAllAsRead()">
-        Mark all as read
+        {{ "mark all as read" | translate | titlecase }}
       </div>
     </div>
 
     <div class="notifications-wrapper">
       <ng-container *ngFor="let chat of chatsMenu.chats">
-        <app-side-nav-chat [chat]="chat" (selectedChat)="onSelectedChat($event)"></app-side-nav-chat>
+        <app-side-nav-chat
+          [chat]="chat"
+          (selectedChat)="onSelectedChat($event)"
+        ></app-side-nav-chat>
         <mat-divider></mat-divider>
       </ng-container>
     </div>
-    <div class="footer" routerLink="/chats" (click)="openMessages = false" matRipple
-      [matRippleColor]="'var(--primary-light)'">
-      View All Messages
+    <div
+      class="footer"
+      routerLink="/chats"
+      (click)="openMessages = false"
+      matRipple
+      [matRippleColor]="'var(--primary-light)'"
+    >
+      {{ "view all messages" | translate | titlecase }}
     </div>
   </div>
 </div>
