--- a/clients/owner-client/src/app/_layouts/account/account-info/account-info.component.html
+++ b/clients/owner-client/src/app/_layouts/account/account-info/account-info.component.html
@@ -2,52 +2,52 @@
   <div class="main-wrapper">
     <div class="info-wrapper">
       <div class="info-row">
-        <div>Username</div>
+        <div>{{ 'username' | translate | titlecase }}</div>
         <div>{{ account.username }}</div>
       </div>
       <mat-divider></mat-divider>
       <div class="info-row">
-        <div>First Name</div>
+        <div>{{ 'name' | translate | titlecase }}</div>
         <div>{{ account.firstName }}</div>
       </div>
       <mat-divider></mat-divider>
       <div class="info-row">
-        <div>Last Name</div>
+        <div>{{ 'last name' | translate | titlecase }}</div>
         <div>{{ account.lastName }}</div>
       </div>
       <mat-divider></mat-divider>
       <div class="info-row">
-        <div>Email</div>
+        <div>{{ 'email' | translate | titlecase }}</div>
         <div>{{ account.email }}</div>
       </div>
       <mat-divider></mat-divider>
       <div class="info-row">
-        <div>Country</div>
+        <div>{{ 'country' | translate | titlecase }}</div>
         <div>{{ account.country }}</div>
       </div>
       <mat-divider></mat-divider>
       <div class="info-row">
-        <div>City</div>
+        <div>{{ 'city' | translate | titlecase }}</div>
         <div>{{ account.city }}</div>
       </div>
       <mat-divider></mat-divider>
       <div class="info-row">
-        <div>Address</div>
+        <div>{{ 'address' | translate | titlecase }}</div>
         <div>{{ account.address }}</div>
       </div>
       <mat-divider></mat-divider>
       <div class="info-row">
-        <div>Phone</div>
+        <div>{{ 'phone' | translate | titlecase }}</div>
         <div>{{ account.phoneNumber }}</div>
       </div>
       <mat-divider></mat-divider>
       <div class="info-row">
-        <div>Birth</div>
+        <div>{{ 'birth' | translate | titlecase }}</div>
         <div>{{ account.birth | date }}</div>
       </div>
     </div>
     <div class="description-wrapper">
-      <h1 class="description">Description</h1>
+      <h1 class="description">{{ 'description' | translate | titlecase }}</h1>
       <p>
         {{ account.description }}
       </p>
@@ -57,7 +57,7 @@
             <mat-icon>groups</mat-icon>
           </button>
           <div>{{ account.employeesNumber }}</div>
-          <div>Employees</div>
+          <div>{{ 'employees' | translate | titlecase }}</div>
         </div>
 
         <div class="description-btn">
@@ -65,7 +65,7 @@
             <mat-icon>restaurant</mat-icon>
           </button>
           <div>{{ account.restaurantsNumber }}</div>
-          <div>Restaurant</div>
+          <div>{{ 'restaurant' | translate | titlecase }}</div>
         </div>
 
         <div class="description-btn">
@@ -73,7 +73,7 @@
             <mat-icon>menu_book</mat-icon>
           </button>
           <div>{{ account.menusNumber }}</div>
-          <div>Menus</div>
+          <div>{{ 'menus' | translate | titlecase }}</div>
         </div>
 
         <div class="description-btn">
@@ -81,7 +81,7 @@
             <mat-icon>local_cafe</mat-icon>
           </button>
           <div>{{ account.todayOrdersNumber }}</div>
-          <div>Today Orders</div>
+          <div>{{ 'today orders' | translate | titlecase }}</div>
         </div>
       </div>
     </div>
