--- a/clients/owner-client/src/app/_layouts/menus/menus-details/menus-details.component.html
+++ b/clients/owner-client/src/app/_layouts/menus/menus-details/menus-details.component.html
@@ -18,22 +18,22 @@
           color="accent"
           routerLink="/menus/edit/{{ menu.id }}"
         >
-          Edit Menu
+          {{ "edit" | translate | titlecase }}
         </button>
         <button mat-raised-button color="warn" (click)="onDeleteMenu()">
-          Delete Menu
+          {{ "delete" | translate | titlecase }}
         </button>
       </div>
     </div>
   </div>
 
   <mat-tab-group>
-    <mat-tab label="View Menu Items">
+    <mat-tab label="{{ 'view menu items' | translate | titlecase }}">
       <div class="filter-wrapper">
         <mat-button-toggle-group [(ngModel)]="offer" (change)="onOfferChange()" name="selectOffer" aria-label="Select offer">
-          <mat-button-toggle class="button-toggle" value="all">All</mat-button-toggle>
-          <mat-button-toggle class="button-toggle" value="noSpecialOffer">No Special Offer</mat-button-toggle>
-          <mat-button-toggle class="button-toggle" value="specialOffer">Special Offer</mat-button-toggle>
+          <mat-button-toggle class="button-toggle" value="all">{{ "all" | translate | titlecase }}</mat-button-toggle>
+          <mat-button-toggle class="button-toggle" value="noSpecialOffer">{{ "no special offer" | translate | titlecase }}</mat-button-toggle>
+          <mat-button-toggle class="button-toggle" value="specialOffer">{{ "special offer" | translate | titlecase }}</mat-button-toggle>
         </mat-button-toggle-group>
       </div>
       <app-menu-item-list [menuItems]="menu.menuItems.result"></app-menu-item-list>
@@ -50,7 +50,7 @@
         </mat-paginator>
       </div>
     </mat-tab>
-    <mat-tab label="Create Menu Item">
+    <mat-tab label="{{ 'create menu item' | translate | titlecase }}">
       <app-menu-item-create
         [menuId]="menuId"
         (menuItemCreated)="menuItemCreated($event)"
