Added language btn for desktop version

--- a/clients/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/top-nav-buttons.component.html
+++ b/clients/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/top-nav-buttons.component.html
@@ -1,4 +1,5 @@
 <div class="main-wrapper">
+  <app-language-btn></app-language-btn>
   <app-message-btn></app-message-btn>
   <app-notification-btn></app-notification-btn>
   <app-account-btn
